force-app/main/default/objects/vlocity_ins__AttributeAssignmentExport__c/fields/vlocity_ins__AttributeCategory__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__AttributeCategory__c</fullName>
    <label>Attribute Category</label>
    <referenceTo>vlocity_ins__AttributeCategory__c</referenceTo>
    <relationshipLabel>Attribute Assignment Export</relationshipLabel>
    <relationshipName>AttributeAssignmentExport</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>