force-app/main/default/objects/vlocity_ins__AttributeAssignmentExport__c/fields/vlocity_ins__SelectedAttributes__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SelectedAttributes__c</fullName>
    <label>Selected Attributes</label>
    <length>32678</length>
    <type>LongTextArea</type>
</CustomField>